--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.bg-light.min-height {
+    height: calc(100vh - 56px);
+}
+.date-text{
+    font-size: 12px;
+    font-weight: bold;
+    color: gray;
+}
